<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:background="#323236"
    android:layout_height="150dp"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:textColor="#fff"
        android:id="@+id/popup_masterList_autocomplete_country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_country" />

    <AutoCompleteTextView
        android:textColor="#fff"
        android:id="@+id/popup_masterList_autocomplete_city"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_city" />

    <Button
        android:clickable="false"
        android:id="@+id/popup_masterList_btn_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />


</LinearLayout>