<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackGround"
    tools:context="com.fedor.pavel.tattoocommunity.fragments.AllPhotosFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/fragment_all_photos_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/fragment_all_photos_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/tv_last_works"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:lines="2"
            android:textColor="#fff"
            android:textSize="18sp"
            tools:text="@string/last_photos" />

        </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fragment_all_photos_action_filter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Фильтры"
                    android:layout_weight="2"
                    android:textAllCaps="false"
                    android:layout_marginLeft="14dp"
                    android:drawableLeft="@drawable/ic_action_filter"
                    android:background="@drawable/btn_default_selector"
                    android:textSize="14sp"/>

                <RadioGroup
                    android:id="@+id/fragment_all_photos_rg_list_state"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_marginLeft="8dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fragment_all_photos_action_grid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/toolbar_button_background"
                        android:button="@drawable/selector_action_grid"
                        android:text="Сетка"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/fragment_all_photos_action_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/toolbar_button_background"
                        android:button="@drawable/selector_action_list"
                        android:text="Список"
                        android:textSize="14sp" />

                </RadioGroup>


            </LinearLayout>



    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/categories"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_all_photos_changed_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/all_works"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
