<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="com.fedor.pavel.tattoocommunity.ProfileSettingsActivity">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_profile_settings_tilFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/activity_profile_settings_edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_profile_settings_edtFullName_hint"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>


            <ImageView
                android:id="@+id/activity_profile_imv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@id/activity_profile_settings_tilFullName"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_action_master" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_profile_settings_tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_profile_settings_tilFullName"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/activity_profile_settings_edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_profile_settings_edtEmail"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/activity_profile_imv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@id/activity_profile_settings_tilEmail"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_communication_email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_profile_settings_tilPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_profile_settings_tilEmail"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/activity_profile_settings_edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/activity_profile_imv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@id/activity_profile_settings_tilPhone"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_communication_phone" />


            <TextView
                android:id="@+id/activity_profile_tv_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_profile_settings_tilPhone"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_default_selector"
                android:text="@string/activity_profile_imv_place"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/activity_profile_imv_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/activity_profile_tv_place"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_action_work_place" />


            <LinearLayout
                android:id="@+id/activity_profile_rl_placeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_profile_tv_place"
                android:layout_marginTop="12dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">


            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>